made suggestions and states dropdown positioned hover above other elements and fixed recent results not showing up once old cookies expire

--- a/CSS/mainStyle.css
+++ b/CSS/mainStyle.css
@@ -240,6 +240,7 @@ nav {
 
 #search {
 	display: inline-block;
+	position: relative;
 	opacity: 0;
 	/*margin-top: -60px;*/
 	width: 450px;
@@ -282,6 +283,7 @@ nav {
 
 #search--suggestions {
 	display: inline-block;
+	position: absolute;
 	/*flex-direction: column;*/
 	width: 100%;
 	height: 0px;
@@ -292,6 +294,7 @@ nav {
 	text-align: left;
 	margin: 0px;
 	padding: 0px;
+	left: 0px;
 	transition: height 400ms ease-out;
 	overflow: hidden;
 	/*border: 1px dashed pink;*/
@@ -353,6 +356,7 @@ nav {
 
 	#states {
 		display: inline-block;
+		position: absolute;
 		white-space: nowrap;
 		width: 0px;
 		overflow: hidden;
